--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <button class="play-btn">▶ Play</button>
           </div>
           <h3>Sentient Dog Runner</h3>
-          <p>by Amit Prasad</p>
+          <p>by 0xBalls</p>
         </div>
 
         <div class="game-card">
@@ -33,7 +33,7 @@
             <button class="play-btn">▶ Play</button>
           </div>
           <h3>Sentient Pong</h3>
-          <p>by Amit Prasad</p>
+          <p>by 0xBalls</p>
         </div>
 
         <div class="game-card">
@@ -43,7 +43,7 @@
             <button class="play-btn">▶ Play</button>
           </div>
           <h3>Sentient Memory Match</h3>
-          <p>by Amit Prasad</p>
+          <p>by 0xBalls</p>
         </div>
 
         <div class="game-card">
@@ -53,7 +53,18 @@
             <button class="play-btn">▶ Play</button>
           </div>
           <h3>Sentient Puzzle Slide</h3>
-          <p>by Amit Prasad</p>
+          <p>by 0xBalls</p>
+        </div>
+      </div>
+
+        <div class="game-card">
+          <div class="thumbnail">
+            <img src="puzzle-thumb.png" alt="Sentient Puzzle Slide" />
+            <video src="puzzle-preview.mp4" muted loop></video>
+            <button class="play-btn">▶ Play</button>
+          </div>
+          <h3>Sentient Tower</h3>
+          <p>by 0xBalls</p>
         </div>
       </div>
     </section>
