--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
         <div class="game-card">
           <div class="thumbnail">
-            <img src="puzzle-thumb.png" alt="Sentient Puzzle Slide" />
-            <video src="puzzle-preview.mp4" muted loop></video>
+            <img src="tower-thumb.png" alt="Sentient Tower" />
+            <video src="tower-preview.mp4" muted loop></video>
             <button class="play-btn">▶ Play</button>
           </div>
           <h3>Sentient Tower</h3>
