--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
     </section>
   </main>
 
+  <!-- Popup Modal -->
+  <div class="modal" id="modal">
+    <div class="modal-content">
+      <span class="close" id="close-modal">&times;</span>
+      <img id="modal-image" alt="">
+      <h2 id="modal-title"></h2>
+      <p id="modal-desc"></p>
+      <p class="creator">Created by <span id="modal-author"></span></p>
+      <div class="rating" id="modal-rating"></div>
+      <a id="modal-play" class="play-btn" target="_blank">Play Now</a>
+    </div>
+  </div>
+
   <footer>
     <p>© 2025 Games Hub — Created by Amit Prasad</p>
   </footer>
