--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
     </div>
   </div>
 
+  <div id="gameModal" class="modal">
+  <div class="modal-content">
+    <span id="closeModal" class="close">&times;</span>
+    <video id="modalVideo" controls muted loop></video>
+    <h2 id="modalTitle"></h2>
+    <p id="modalDesc"></p>
+    <p id="modalCreator"></p>
+    <div class="rating">
+      <span id="modalStars"></span>
+      <span id="modalRating"></span>
+    </div>
+    <button id="playNow" class="play-btn">Play Now</button>
+  </div>
+ </div>
+  
   <footer>
     <p>© 2025 Games Hub — Created by Amit Prasad</p>
   </footer>
