--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Games Hub</title>
+  <title>GamesHub</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -25,35 +25,23 @@
   </main>
 
   <!-- Popup Modal -->
-  <div class="modal" id="modal">
+  <div id="gameModal" class="modal">
     <div class="modal-content">
-      <span class="close" id="close-modal">&times;</span>
-      <img id="modal-image" alt="">
-      <h2 id="modal-title"></h2>
-      <p id="modal-desc"></p>
-      <p class="creator">Created by <span id="modal-author"></span></p>
-      <div class="rating" id="modal-rating"></div>
-      <a id="modal-play" class="play-btn" target="_blank">Play Now</a>
+      <span id="closeModal" class="close">&times;</span>
+      <video id="modalVideo" controls muted loop></video>
+      <h2 id="modalTitle"></h2>
+      <p id="modalDesc"></p>
+      <p class="creator">Created by <span id="modalCreator"></span></p>
+      <div class="rating">
+        <span id="modalStars"></span>
+        <span id="modalRating"></span>
+      </div>
+      <button id="playNow" class="play-btn">Play Now</button>
     </div>
   </div>
 
-  <div id="gameModal" class="modal">
-  <div class="modal-content">
-    <span id="closeModal" class="close">&times;</span>
-    <video id="modalVideo" controls muted loop></video>
-    <h2 id="modalTitle"></h2>
-    <p id="modalDesc"></p>
-    <p id="modalCreator"></p>
-    <div class="rating">
-      <span id="modalStars"></span>
-      <span id="modalRating"></span>
-    </div>
-    <button id="playNow" class="play-btn">Play Now</button>
-  </div>
- </div>
-  
   <footer>
-    <p>© 2025 Games Hub — Created by Amit Prasad</p>
+    <p>© 2025 GamesHub — Created by Amit Prasad</p>
   </footer>
 
   <script src="script.js"></script>
