--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
       <video id="modalVideo" controls muted loop></video>
       <h2 id="modalTitle"></h2>
       <p id="modalDesc"></p>
-      <p class="creator">Created by <span id="modalCreator"></span></p>
+      <div id="modalDesc2"></div>
+        <p class="creator">Created by <a id="modalCreator" href="#" target="_blank"></a></p>
       <div class="rating">
-        <span id="modalStars"></span>
-        <span id="modalRating"></span>
-      </div>
-      <button id="playNow" class="play-btn">Play Now</button>
+      <span id="modalStars"></span>
+      <span id="modalRating"></span>
+    </div>
+    <button id="playNow" class="play-btn">Play Now</button>
     </div>
   </div>
 
