--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
   <header>
-    <h1><span class="white">Games</span><span class="orange">Hub</span></h1>
+    <div class="header-left">
+      <img src="assets/logo.png" alt="GamesHub Logo" class="site-logo" />
+      <h1><span class="white">Games</span><span class="orange">Hub</span></h1>
+    </div>
     <input type="text" id="search" placeholder="Search games..." />
   </header>
 
