--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
 
     <section class="category">
-      <h2>Dev Games</h2>
+      <h2>Other Games</h2>
       <div class="games-grid" id="dev-games"></div>
     </section>
   </main>
@@ -45,7 +45,7 @@
   </div>
 
   <footer>
-    <p>© 2025 GamesHub — Created by Amit Prasad</p>
+    <p>© 2025 GamesHub — Created by 0xBalls/p>
   </footer>
 
   <script src="script.js"></script>
