--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </div>
 
   <footer>
-    <p>© 2025 GamesHub — Created by 0xBalls/p>
+    <p>© 2025 GamesHub Created by 0xBalls</p>
   </footer>
 
   <script src="script.js"></script>
