--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <p>© 2025 GamesHub Created by 0xBalls</p>
   </footer>
 
+  <script src="fall.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
